deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audit-bot-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: audit-bot
  template:
    metadata:
      labels:
        app: audit-bot
    spec:
      containers:
      - name: audit-bot
        image: serinregistryxr58p9.azurecr.io/audit-bot:stress-test-v4
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"
