netpol-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: web-server-deny-all
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: web-server
  policyTypes:
  - Ingress
